fixed .proto, also compiling related files
